objects/npe4__Relationship_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Allows people to chose between different types of relationship hierarchies.</description>
    <fields>
        <fullName>npe4__Allow_AutoCreated_Duplicates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Auto-created Relationships are auto-deduplicated to prevent duplicate Relationship records from being created between two Contacts. Check this box to disable this behavior &amp; allow multiple Relationships of the same Type to be created between two Contacts</description>
        <inlineHelpText>Auto-created Relationships are auto-deduplicated to prevent duplicate Relationship records from being created between two Contacts.  Check this box to disable this behavior &amp; allow multiple Relationships of the same Type to be created between two Contacts</inlineHelpText>
        <label>Allow Auto-Created Duplicate Relations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe4__DISABLE_RelationshipCM_trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED. Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</description>
        <inlineHelpText>DEPRECATED. Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</inlineHelpText>
        <label>DEPRECATED-Disable_RelCM_trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe4__DISABLE_RelationshipContacts_trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED. Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</description>
        <inlineHelpText>DEPRECATED. Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</inlineHelpText>
        <label>DEPRECATED-Disable_RelContacts_trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe4__DISABLE_Relationships_trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED. Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</description>
        <inlineHelpText>DEPRECATED. Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</inlineHelpText>
        <label>DEPRECATED-Disable_Relationships_trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe4__Force_Synchronous_Auto_Create__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED.  This setting is not used.</description>
        <inlineHelpText>DEPRECATED.  This setting is not used.</inlineHelpText>
        <label>DEPRECATED-Force Synchronous Auto Create</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe4__Gender_Field__c</fullName>
        <description>The custom field used to define the gender of a Contact for determining reciprocal relationships</description>
        <inlineHelpText>The custom field used to define the gender of a Contact for determining reciprocal relationships</inlineHelpText>
        <label>Gender Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe4__Reciprocal_Method__c</fullName>
        <description>Determines method used to generate the reciprocal relationship.  Either List Setting which uses custom settings by gender (see Reciprocal Relationships tab), or Value Inversion, which inverts the type if appropriate (&quot;Parent-Child&quot; to &quot;Child-Parent&quot;)</description>
        <inlineHelpText>Determines method used to generate the reciprocal relationship.  Either List Setting which uses custom settings by gender (see Reciprocal Relationships tab), or Value Inversion, which inverts the type if appropriate (&quot;Parent-Child&quot; to &quot;Child-Parent&quot;)</inlineHelpText>
        <label>Reciprocal Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe4__Relationship_Name_Field_Id__c</fullName>
        <description>The ID of the Name field that is dynamically generated in this org, can be found via source view when creating a new Relationship or in the URL when using the &apos;New Relationships&apos; button.  Populating this value will allow the field to pre-populate when creating new Relationships from the Relationship Viewer</description>
        <inlineHelpText>Populating this value will allow the field to pre-populate when creating new Relationships from the Relationship Viewer (see description for more information)</inlineHelpText>
        <label>Relationship Name Field Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe4__Relationship_Name_Id_Field_Id__c</fullName>
        <description>The ID of the Name Id field that is dynamically generated in this org, can be found via source view when creating a new Relationship or in the URL when using the &apos;New Relationships&apos; button. Populating this value will allow the field to pre-populate when creating new Relationships from the Relationship Viewer</description>
        <inlineHelpText>Populating this value will allow the field to pre-populate when creating new Relationships from the Relationship Viewer (see description for more information)</inlineHelpText>
        <label>Relationship Name Id Field Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Relationship Settings</label>
</CustomObject>